# ksc-invoicing

./: .gitignore  README.md  config.py  env.yaml  example_invoice_data.json  generate_invoice.py  generate_invoice_from_json.py  pyproject.toml
config/: style.json
example_config/: empty_template.json  invoice.json
invoice_config/: example_invoice_data.json  style.json
kscadmin/: address.py  contactinfo.py  invoice.py  invoicebuilder.py
kscinvoicing/: __init__.py  cli.py  generate_invoice_from_json.py
kscinvoicing/info/: __init__.py  address.py  contactinfo.py  party.py
kscinvoicing/invoice/: __init__.py  invoice.py  invoice_store.py  invoicedata.py  invoicelogger.py
kscinvoicing/pdf/: borbinvoice.py  invoicebuilder.py  tableschema.py  utils.py
kscinvoicing/web/: app.py  profile_store.py
pdfinvoicing/: contactinfo.py  invoicebuilder.py
scripts/: example.py  example_from_json.py
tests/: test_generate_invoice_from_json.py  test_scripts.py
tests/info/: test_address.py
tests/invoice/: test_invoicedata.py
tests/web/: test_app_helpers.py  test_profile_store.py
