[project]
name = "ksc-invoicing"
version = "0.1.0"
description = "Invoicing utility for french micro-entrepreneurs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "borb==2.1.25",
    "streamlit>=1.32",
]

[project.scripts]
kscinvoicing = "kscinvoicing.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kscinvoicing"]
